Update config, layouts, and archive for author and posts fixes

--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: "My Blogs Name"
-author: "Default Author Name"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+# Site settings
+title: "One Photon"
+author: "prakash"   # or your preferred name
+description: "..and infinite darkness."
 
-# Email / Social media user names used by the minima theme:
-# All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+# Contact & Social media (optional — remove if not needed)
+email: "yourmail@example.com"
+twitter_username: "yourtwitter"
+github_username: "onephoton"   # or your actual GitHub username
+linkedin_username: "yourlinkedin"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
@@ -15,9 +15,7 @@ linkedin_username: "linkedinuser"
 #youtube_username: username
 #googleplus_username: +username
 
-#########################################################################################
-######### Nothing below needs to be changed (unless you know what you're doing) #########
-#########################################################################################
+# Build settings
 theme: "minima"
 
 rss: rss
@@ -25,7 +23,7 @@ rss: rss
 kramdown:
   syntax_highlighter_opts:
     disable: true
-    
+
 plugins:
   - jekyll-feed
   - jekyll-sitemap
@@ -34,9 +32,10 @@ titles_from_headings:
   strip_title: true
   collections: true
 
+# Defaults for posts
 defaults:
   - scope:
       path: ""
-      type: post
+      type: posts
     values:
-      tags: Other
+      tags: Thoughts
